<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".QZoneMainActivity" >
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/current_state"
        android:id="@+id/current_state_title"
        android:textSize="24sp"
        android:layout_marginBottom="10sp"
    />
    <View
        android:layout_below="@id/current_state_title"
    	android:layout_width="fill_parent"
		android:layout_height="0.2dp"
		android:id="@+id/separator1"
		android:visibility="visible"
		android:background="@android:color/darker_gray"
	/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/separator1"
        android:layout_alignParentLeft="true"
        android:text="@string/interval_timing_title"
        android:id="@+id/intervalTimingTitle"
        android:layout_marginBottom="5sp"
        android:textSize="16sp"
    />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/separator1"
        android:layout_alignParentRight="true"
        android:id="@+id/qzone_timing_interval"
        android:layout_marginBottom="5sp"
        android:textSize="16sp"
    />
    
    <View
        android:layout_below="@id/intervalTimingTitle"
    	android:layout_width="fill_parent"
		android:layout_height="0.2dp"
		android:id="@+id/separator2"
		android:visibility="visible"
		android:background="@android:color/darker_gray"
	/>
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/separator2"
        android:text="@string/ring_volume"
        android:id="@+id/current_ringVolume"
        android:layout_marginBottom="5sp"
        android:textSize="16sp"
    />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/separator2"
        android:id="@+id/current_ringerVolume"
        android:layout_marginBottom="5sp"
        android:textSize="16sp"
    />

    <View
        android:layout_below="@id/current_ringVolume"
    	android:layout_width="fill_parent"
		android:layout_height="0.2dp"
		android:id="@+id/separator3"
		android:visibility="visible"
		android:background="@android:color/darker_gray"
	/>
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/separator3"
        android:id="@+id/silent_status_title"
        android:text="@string/silent_status"
        android:layout_marginBottom="5sp"
        android:textSize="16sp"
    />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/separator3"
        android:id="@+id/silent_status"
        android:layout_marginBottom="5sp"
        android:textSize="16sp"
    />
    
    <View
        android:layout_below="@id/silent_status_title"
    	android:layout_width="fill_parent"
		android:layout_height="0.2dp"
		android:id="@+id/separator4"
		android:visibility="visible"
		android:background="@android:color/darker_gray"
	/>
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/separator4"
        android:id="@+id/vibe_status_title"
        android:text="@string/vibe_status"
        android:layout_marginBottom="5sp"
        android:textSize="16sp"
    />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/separator4"
        android:id="@+id/vibe_status"
        android:layout_marginBottom="5sp"
        android:textSize="16sp"
    />

    <View
        android:layout_below="@id/vibe_status_title"
    	android:layout_width="fill_parent"
		android:layout_height="0.2dp"
		android:id="@+id/separator5"
		android:visibility="visible"
		android:background="@android:color/darker_gray"
	/>
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/separator5"
        android:id="@+id/bluetooth_status_title"
        android:text="@string/bluetooth_status_title"
        android:layout_marginBottom="5sp"
        android:textSize="16sp"
    />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/separator5"
        android:id="@+id/bluetooth_status"
        android:layout_marginBottom="5sp"
        android:textSize="16sp"
    />

    <View
        android:layout_below="@id/bluetooth_status_title"
    	android:layout_width="fill_parent"
		android:layout_height="0.2dp"
		android:id="@+id/separator6"
		android:visibility="visible"
		android:background="@android:color/darker_gray"
	/>
    	    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/separator6"
        android:id="@+id/qzone_status_title"
        android:text="@string/qzone_status_title"
        android:layout_marginBottom="5sp"
        android:textSize="16sp"
    />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/separator6"
        android:id="@+id/qzone_status"
        android:layout_marginBottom="5sp"
        android:textSize="16sp"
    />
    <Button
        android:id="@+id/stopAlert"
        android:layout_height="wrap_content"
        android:layout_below="@id/qzone_status"
        android:layout_width="wrap_content"
        android:text="@string/stop_alert"
    	android:onClick="stopAlert"
    	android:layout_alignParentLeft="true"
   	/>
</RelativeLayout>
